RESOLVED FIXED 284326
[WebGPU] shouldn't call setSamplerState when argument buffer does not exist
https://bugs.webkit.org/show_bug.cgi?id=284326
Summary [WebGPU] shouldn't call setSamplerState when argument buffer does not exist
Mike Wyrzykowski
Reported 2024-12-09 14:17:35 PST
[WebGPU] shouldn't call setSamplerState when argument buffer does not exist
Attachments
Mike Wyrzykowski
Comment 1 2024-12-09 14:18:02 PST
Mike Wyrzykowski
Comment 2 2024-12-09 14:26:10 PST
EWS
Comment 3 2024-12-10 06:33:31 PST
Committed 287601@main (7f074e8bb940): <https://commits.webkit.org/287601@main> Reviewed commits have been landed. Closing PR #37663 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.