[WebGPU] shouldn't call setSamplerState when argument buffer does not exist https://bugs.webkit.org/show_bug.cgi?id=284326 radar://141179365

Reviewed by Tadeu Zagallo.

If an AB for a specific stage does not exist, it is illegal to call
setBuffer:, setTexture:, setSamplerState:, etc as no AB will be bound to the encoder.

* LayoutTests/fast/webgpu/nocrash/fuzz-284326-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-284326.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::BindGroup::rebindSamplersIfNeeded const):

Only call setSamplerState: when the AB exists.
Canonical link: https://commits.webkit.org/287601@main