Source/WebGPU/WebGPU/BindGroup.mm
@@ -995,7 +995,7 @@ Ref<BindGroup> Device::createBindGroup(const WGPUBindGroupDescriptor& descriptor
                 Ref apiBuffer = WebGPU::protectedFromAPI(entry.buffer);
                 id<MTLBuffer> buffer = apiBuffer->buffer();
                 bool isDestroyed = apiBuffer->isDestroyed();
-                if (isDestroyed) {
+                if (isDestroyed && stage != ShaderStage::Undefined) {
                     argumentEncoder[stage] = nil;
                     argumentBuffer[stage] = nil;
                 }
@@ -1139,7 +1139,7 @@ Ref<BindGroup> Device::createBindGroup(const WGPUBindGroupDescriptor& descriptor
                         VALIDATION_ERROR(@"Can not create bind group with filterable 32bpp floating point texture as float32-filterable feature is not enabled");
                         return BindGroup::createInvalid(*this);
                     }
-                } else {
+                } else if (stage != ShaderStage::Undefined) {
                     argumentEncoder[stage] = nil;
                     argumentBuffer[stage] = nil;
                 }
@@ -1335,6 +1335,15 @@ uint64_t BindGroup::makeEntryMapKey(uint32_t baseMipLevel, uint32_t baseArrayLay
     return (static_cast<uint64_t>(aspect) - 1) | (static_cast<uint64_t>(baseMipLevel) << 1) | (static_cast<uint64_t>(baseArrayLayer) << 32);
 }
 
+static bool WARN_UNUSED_RETURN setArgumentBuffer(id<MTLArgumentEncoder> encoder, id<MTLBuffer> buffer)
+{
+    if (!encoder || !buffer)
+        return false;
+
+    [encoder setArgumentBuffer:buffer offset:0];
+    return true;
+}
+
 void BindGroup::rebindSamplersIfNeeded() const
 {
     if (!m_bindGroupLayout)
@@ -1348,18 +1357,14 @@ void BindGroup::rebindSamplersIfNeeded() const
 
         WTFLogAlways("Rebinding of samplers required, if this occurs frequently the application is using too many unique samplers");
         id<MTLSamplerState> samplerState = sampler->samplerState();
-        if (shaderStageArray[ShaderStage::Vertex].has_value()) {
-            [m_bindGroupLayout->vertexArgumentEncoder() setArgumentBuffer:vertexArgumentBuffer() offset:0];
+        if (shaderStageArray[ShaderStage::Vertex].has_value() && setArgumentBuffer(m_bindGroupLayout->vertexArgumentEncoder(), vertexArgumentBuffer()))
             [m_bindGroupLayout->vertexArgumentEncoder() setSamplerState:samplerState atIndex:*shaderStageArray[ShaderStage::Vertex]];
-        }
-        if (shaderStageArray[ShaderStage::Fragment].has_value()) {
-            [m_bindGroupLayout->fragmentArgumentEncoder() setArgumentBuffer:fragmentArgumentBuffer() offset:0];
+
+        if (shaderStageArray[ShaderStage::Fragment].has_value() && setArgumentBuffer(m_bindGroupLayout->fragmentArgumentEncoder(), fragmentArgumentBuffer()))
             [m_bindGroupLayout->fragmentArgumentEncoder() setSamplerState:samplerState atIndex:*shaderStageArray[ShaderStage::Fragment]];
-        }
-        if (shaderStageArray[ShaderStage::Compute].has_value()) {
-            [m_bindGroupLayout->computeArgumentEncoder() setArgumentBuffer:computeArgumentBuffer() offset:0];
+
+        if (shaderStageArray[ShaderStage::Compute].has_value() && setArgumentBuffer(m_bindGroupLayout->computeArgumentEncoder(), computeArgumentBuffer()))
             [m_bindGroupLayout->computeArgumentEncoder() setSamplerState:samplerState atIndex:*shaderStageArray[ShaderStage::Compute]];
-        }
     }
 }
 
@@ -1389,7 +1394,8 @@ bool BindGroup::updateExternalTextures(const ExternalTexture& externalTexture)
         m_resources[containerIndex].mtlResources[resourceIndex + 1] = texture1;
 
         id<MTLArgumentEncoder> argumentEncoder = argumentEncoders[stage];
-        [argumentEncoder setArgumentBuffer:argumentBuffers[stage] offset:0];
+        if (!setArgumentBuffer(argumentEncoder, argumentBuffers[stage]))
+            continue;
 
         [argumentEncoder setTexture:texture0 atIndex:index++];
         [argumentEncoder setTexture:texture1 atIndex:index++];
